--- a/precise_description/package.xml
+++ b/precise_description/package.xml
@@ -12,7 +12,7 @@
   <maintainer email="benjamin.maidel@mojin-robotics.de">Benjamin Maidel</maintainer>
   <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
 
-  <license>BSD</license>
+  <license>Apache 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>joint_state_publisher</exec_depend>
