add roslaunch checks

--- a/precise_description/CMakeLists.txt
+++ b/precise_description/CMakeLists.txt
@@ -6,6 +6,19 @@ find_package(catkin REQUIRED)
 
 catkin_package()
 
-install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
-install(DIRECTORY urdf DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
-install(DIRECTORY meshes DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+install(DIRECTORY config launch meshes robots urdf
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
+set(robot_list
+  PF3400SX
+)
+
+if(CATKIN_ENABLE_TESTING)
+    find_package(roslaunch REQUIRED)
+    foreach(robot ${robot_list})
+        message("Testing robot: ${robot}")
+        roslaunch_add_file_check(launch/display.launch robot:=${robot})
+        roslaunch_add_file_check(launch/upload_robot.launch robot:=${robot})
+    endforeach()
+endif()
