fix roslaunch checks

--- a/precise_description/CMakeLists.txt
+++ b/precise_description/CMakeLists.txt
@@ -18,7 +18,7 @@ if(CATKIN_ENABLE_TESTING)
     find_package(roslaunch REQUIRED)
     foreach(robot ${robot_list})
         message("Testing robot: ${robot}")
-        roslaunch_add_file_check(launch/display.launch robot:=${robot})
+        roslaunch_add_file_check(launch/display_robot.launch robot:=${robot})
         roslaunch_add_file_check(launch/upload_robot.launch robot:=${robot})
     endforeach()
 endif()
