--- a/precise_description/robots/PF3400.yaml
+++ b/precise_description/robots/PF3400.yaml
@@ -10,7 +10,7 @@ arm:
     limit:
       effort: 1000.0
       lower: 0.0015  # m
-      upper: 0.4015  # m
+      upper: 0.4015  # m - 400mm standard, 750 mm, 1160 mm
       velocity: 0.5
   arm_2_joint:
     origin:
@@ -22,8 +22,8 @@ arm:
       yaw: 0.0
     limit:
       effort: 1000.0
-      lower: -1.62316  # -93
-      upper: +1.62316  # +93
+      lower: -1.57079632679  # -90
+      upper: +1.57079632679  # +90
       velocity: 0.5
   arm_3_joint:
     origin:
@@ -35,8 +35,8 @@ arm:
       yaw: 0.0
     limit:
       effort: 1000.0
-      lower: +0.20944  # +12
-      upper: +6.07375  # +348
+      lower: -2.91469985083  # -167
+      upper: +2.91469985083  # +167
       velocity: 0.5
   arm_4_joint:
     origin:
@@ -48,8 +48,8 @@ arm:
       yaw: 0.0
     limit:
       effort: 1000.0
-      lower: -16.7552  # -960
-      upper: +16.7552  # +960
+      lower: -16.9296937443  # -970
+      upper: +16.9296937443  # +970
       velocity: 0.5
   arm_5_joint:
     origin:
