--- a/precise_driver/CMakeLists.txt
+++ b/precise_driver/CMakeLists.txt
@@ -14,8 +14,7 @@ catkin_package()
 ## Build
 include_directories(include ${catkin_INCLUDE_DIRS})
 
-add_library(precise_hw_interface src/precise_hw_interface.cpp)
-add_library(precise_hw_interface src/precise_tcp_interface.cpp)
+add_library(precise_hw_interface src/precise_hw_interface.cpp src/pflex_device.cpp precise_tcp_interface.cpp)
 add_dependencies(precise_hw_interface ${catkin_EXPORTED_TARGETS})
 target_link_libraries(precise_hw_interface ${catkin_LIBRARIES})
 
