--- a/precise_driver/config/precise_controllers.yaml
+++ b/precise_driver/config/precise_controllers.yaml
@@ -1,27 +1,27 @@
 # Settings for ros_control control loop
 generic_hw_control_loop:
-  loop_hz: 30
+  loop_hz: 20
   cycle_time_error_threshold: 0.01
 
 # Settings for ros_control hardware interface
 hardware_interface:
   joints:
-    - joint1
-    - joint2
-    - joint3
-    - joint4
-    - joint5
+    - arm_1_joint
+    - arm_2_joint
+    - arm_3_joint
+    - arm_4_joint
+    - arm_5_joint
   sim_control_mode: 0 # 0: position, 1: velocity
 
-  ip_address: 127.0.0.1
+  ip_address: 10.4.20.180
   port: 10100
   profile_no: 2
-  speed: 100
-  speed2: 100
+  speed: 80
+  speed2: 0
   accel: 100
-  deccel: 100
+  decel: 100
   accel_ramp: 0.1
-  deccel_ramp: 0.1
+  decel_ramp: 0.1
   in_range: 10
   straight: 0 #0=rotational; -1=straight
 
@@ -38,57 +38,57 @@ position_trajectory_controller:
   type: position_controllers/JointTrajectoryController
   # These joints can likely just be copied from the hardware_interface list above
   joints:
-    - joint1
-    - joint2
-    - joint3
-    - joint4
-    - joint5
+    - arm_1_joint
+    - arm_2_joint
+    - arm_3_joint
+    - arm_4_joint
+    - arm_5_joint
   constraints:
     goal_time: 10.0
     #stopped_position_tolerance: 0.4 # Defaults to 0.01
-    joint1:
+    arm_1_joint:
       trajectory: 0.60
       goal: 0.15
-    joint2:
+    arm_2_joint:
       trajectory: 0.60
       goal: 0.15
-    joint3:
+    arm_3_joint:
       trajectory: 0.60
       goal: 0.15
-    joint4:
+    arm_4_joint:
       trajectory: 0.60
       goal: 0.15
-    joint5:
+    arm_5_joint:
       trajectory: 0.60
       goal: 0.15
   # gains:
-  #     joint1: {p: 2.0,  i: 0.0, d: 0.01, i_clamp: 1}
-  #     joint2: {p: 2.0,  i: 0.0, d: 0.01, i_clamp: 1}
+  #     arm_1_joint: {p: 2.0,  i: 0.0, d: 0.01, i_clamp: 1}
+  #     arm_2_joint: {p: 2.0,  i: 0.0, d: 0.01, i_clamp: 1}
   # state_publish_rate:  50 # Defaults to 50
   # action_monitor_rate: 20 # Defaults to 20
   #hold_trajectory_duration: 0 # Defaults to 0.5
 
 # Individual Position Controllers ---------------------------------------
 # Allows to send individual ROS msg of Float64 to each joint separately
-joint1_position_controller:
+arm_1_joint_position_controller:
   type: position_controllers/JointPositionController
-  joint: joint1
+  joint: arm_1_joint
   pid: { p: 100.0, i: 0.01, d: 10.0 } # pid commands have to effect on position_controllers/JointPositionController
-joint2_position_controller:
+arm_2_joint_position_controller:
   type: position_controllers/JointPositionController
-  joint: joint2
+  joint: arm_2_joint
   pid: { p: 100.0, i: 0.01, d: 10.0 } # pid commands have to effect on position_controllers/JointPositionController
-joint3_position_controller:
+arm_3_joint_position_controller:
   type: position_controllers/JointPositionController
-  joint: joint3
+  joint: arm_3_joint
   pid: { p: 100.0, i: 0.01, d: 10.0 } # pid commands have to effect on position_controllers/JointPositionController
-joint4_position_controller:
+arm_4_joint_position_controller:
   type: position_controllers/JointPositionController
-  joint: joint4
+  joint: arm_4_joint
   pid: { p: 100.0, i: 0.01, d: 10.0 } # pid commands have to effect on position_controllers/JointPositionController
-joint5_position_controller:
+arm_5_joint_position_controller:
   type: position_controllers/JointPositionController
-  joint: joint5
+  joint: arm_5_joint
   pid: { p: 100.0, i: 0.01, d: 10.0 } # pid commands have to effect on position_controllers/JointPositionController
 
 
@@ -97,8 +97,8 @@ joint5_position_controller:
 joint_position_controller:
   type: position_controllers/JointGroupPositionController
   joints:
-    - joint1
-    - joint2
-    - joint3
-    - joint4
-    - joint5
+    - arm_1_joint
+    - arm_2_joint
+    - arm_3_joint
+    - arm_4_joint
+    - arm_5_joint
