--- a/precise_driver/CMakeLists.txt
+++ b/precise_driver/CMakeLists.txt
@@ -5,16 +5,21 @@ add_compile_options(-std=c++11)
 
 find_package(catkin REQUIRED COMPONENTS
   angles
+  cob_srvs
+  geometry_msgs
   realtime_tools
   ros_control_boilerplate
+  std_srvs
 )
 
-catkin_package()
+catkin_package(
+  CATKIN_DEPENDS cob_srvs geometry_msgs std_srvs
+)
 
 ## Build
 include_directories(include ${catkin_INCLUDE_DIRS})
 
-add_library(precise_hw_interface src/precise_hw_interface.cpp src/pflex_device.cpp src/precise_tcp_interface.cpp)
+add_library(precise_hw_interface src/pflex_device.cpp src/precise_hw_interface.cpp src/precise_tcp_interface.cpp)
 add_dependencies(precise_hw_interface ${catkin_EXPORTED_TARGETS})
 target_link_libraries(precise_hw_interface ${catkin_LIBRARIES})
 
