--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
     - VERBOSE_OUTPUT=false
     - VERBOSE_TESTS=false
   matrix:
-    - ROS_DISTRO=kinetic
+    - ROS_DISTRO=kinetic UPSTREAM_WORKSPACE=file
     - ROS_DISTRO=melodic
 install:
   - git clone --quiet --depth 1 https://github.com/fmessmer/industrial_ci.git .industrial_ci -b master_pylint
