use measurments from kinematic table

--- a/precise_description/robots/PF400_short.yaml
+++ b/precise_description/robots/PF400_short.yaml
@@ -1,13 +1,25 @@
 arm:
+  arm_podest_link:
+    visual_mesh: package://precise_description/meshes/arm_podest_link.STL
+  arm_1_link:
+    visual_mesh: package://precise_description/meshes/arm_1_link.STL
+  arm_2_link:
+    visual_mesh: package://precise_description/meshes/arm_2_link.STL
+  arm_3_link:
+    visual_mesh: package://precise_description/meshes/arm_3_link.STL
+  arm_4_link:
+    visual_mesh: package://precise_description/meshes/arm_4_link.STL
+  arm_5_link:
+    visual_mesh: package://precise_description/meshes/arm_5_link.STL
   left_finger:
     visual_mesh: package://precise_description/meshes/mrk_finger.STL
   right_finger:
     visual_mesh: package://precise_description/meshes/mrk_finger.STL
   arm_1_joint:
     origin:
-      x:  0.03005
-      y: -0.0198
-      z:  0.17535
+      x:  0.0
+      y:  0.0
+      z:  0.17282
       roll: 0.0
       pitch: 0.0
       yaw: 0.0
@@ -18,9 +30,9 @@ arm:
       velocity: 0.5
   arm_2_joint:
     origin:
-      x:  0.173001
-      y:  0.020
-      z:  0.0235
+      x:  0.0
+      y:  0.0
+      z:  0.0
       roll: 0.0
       pitch: 0.0
       yaw: 0.0
@@ -31,9 +43,9 @@ arm:
       velocity: 6.2831
   arm_3_joint:
     origin:
-      x:  0.302
+      x:  0.225
       y:  0.0
-      z: -0.072285
+      z: -0.065675
       roll: 0.0
       pitch: 0.0
       yaw: 0.0
@@ -44,9 +56,9 @@ arm:
       velocity: 12.5664
   arm_4_joint:
     origin:
-      x:  0.289
+      x:  0.210
       y:  0.0
-      z: -0.032942
+      z: -0.040178
       roll: 0.0
       pitch: 0.0
       yaw: 0.0
@@ -57,9 +69,9 @@ arm:
       velocity: 12.5664
   arm_5_joint:
     origin:
-      x:  0.078573
+      x:  0.0805
       y:  0.0
-      z: -0.04269
+      z:  0.0
       roll: 0.0
       pitch: 0.0
       yaw: 0.0
@@ -70,9 +82,9 @@ arm:
       velocity: 0.05
   gripper_ee_fixed_joint:
     origin:
-      x:  0.0687
+      x:  0.0805
       y:  0.0
-      z: -0.07
+      z:  0.0
       roll: 0.0
       pitch: 0.0
       yaw: 0.0
