--- a/precise_description/robots/PF400_long.yaml
+++ b/precise_description/robots/PF400_long.yaml
@@ -1,26 +1,38 @@
 arm:
+  arm_podest_link:
+    visual_mesh: package://precise_description/meshes/arm_podest_link.STL
+  arm_1_link:
+    visual_mesh: package://precise_description/meshes/arm_1_link.STL
+  arm_2_link:
+    visual_mesh: package://precise_description/meshes/arm_2_link.STL
+  arm_3_link:
+    visual_mesh: package://precise_description/meshes/arm_3_link_ext.STL
+  arm_4_link:
+    visual_mesh: package://precise_description/meshes/arm_4_link_ext.STL
+  arm_5_link:
+    visual_mesh: package://precise_description/meshes/arm_5_link.STL
   left_finger:
     visual_mesh: package://precise_description/meshes/mrk_finger.STL
   right_finger:
     visual_mesh: package://precise_description/meshes/mrk_finger.STL
   arm_1_joint:
     origin:
-      x:  0.03005
-      y: -0.0198
-      z:  0.17535
+      x:  0.0
+      y:  0.0
+      z:  0.17282
       roll: 0.0
       pitch: 0.0
       yaw: 0.0
     limit:
       effort: 1000.0
       lower: 0.0015  # m
-      upper: 0.4015  # m - 400mm standard, 750 mm, 1160 mm
+      upper: 0.750  # m - 401,5mm standard, 750 mm, 1160 mm
       velocity: 0.5
   arm_2_joint:
     origin:
-      x:  0.173001
-      y:  0.020
-      z:  0.0235
+      x:  0.0
+      y:  0.0
+      z:  0.0
       roll: 0.0
       pitch: 0.0
       yaw: 0.0
@@ -28,12 +40,12 @@ arm:
       effort: 1000.0
       lower: -1.57079632679  # -90
       upper: +1.57079632679  # +90
-      velocity: 0.5
+      velocity: 6.2831
   arm_3_joint:
     origin:
       x:  0.302
       y:  0.0
-      z: -0.072285
+      z: -0.065675
       roll: 0.0
       pitch: 0.0
       yaw: 0.0
@@ -41,12 +53,12 @@ arm:
       effort: 1000.0
       lower: -2.91469985083  # -167
       upper: +2.91469985083  # +167
-      velocity: 0.5
+      velocity: 12.5664
   arm_4_joint:
     origin:
       x:  0.289
       y:  0.0
-      z: -0.032942
+      z: -0.040178
       roll: 0.0
       pitch: 0.0
       yaw: 0.0
@@ -54,12 +66,12 @@ arm:
       effort: 1000.0
       lower: -16.9296937443  # -970
       upper: +16.9296937443  # +970
-      velocity: 0.5
+      velocity: 12.5664
   arm_5_joint:
     origin:
-      x:  0.078573
+      x:  0.0805
       y:  0.0
-      z: -0.04269
+      z:  0.0
       roll: 0.0
       pitch: 0.0
       yaw: 0.0
@@ -67,12 +79,12 @@ arm:
       effort: 1000.0
       lower: +0.051954  # m
       upper: +0.070     # m
-      velocity: 0.5
+      velocity: 0.05
   gripper_ee_fixed_joint:
     origin:
-      x:  0.0687
+      x:  0.0805
       y:  0.0
-      z: -0.07
+      z:  0.0
       roll: 0.0
       pitch: 0.0
       yaw: 0.0
