--- a/precise_driver/package.xml
+++ b/precise_driver/package.xml
@@ -12,13 +12,17 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>angles</depend>
+  <depend>actionlib_msgs</depend>
   <depend>cob_srvs</depend>
   <depend>geometry_msgs</depend>
+  <depend>message_generation</depend>
   <depend>realtime_tools</depend>
   <depend>ros_control_boilerplate</depend>
+  <depend>std_msgs</depend>
   <depend>std_srvs</depend>
 
   <exec_depend>controller_manager</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
   <exec_depend>precise_description</exec_depend>
 
   <test_depend>roslaunch</test_depend>
