--- a/precise_driver/package.xml
+++ b/precise_driver/package.xml
@@ -14,6 +14,7 @@
   <depend>angles</depend>
   <depend>actionlib_msgs</depend>
   <depend>cob_srvs</depend>
+  <depend>controller_manager_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>message_generation</depend>
   <depend>realtime_tools</depend>
