--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ env:
     - VERBOSE_TESTS=false
   matrix:
     - ROS_DISTRO=kinetic UPSTREAM_WORKSPACE=file
+    - ROS_DISTRO=noetic
     - ROS_DISTRO=melodic
 install:
   - git clone --quiet --depth 1 https://github.com/fmessmer/industrial_ci.git .industrial_ci -b master_pylint
