--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ env:
     - VERBOSE_OUTPUT=false
     - VERBOSE_TESTS=false
   matrix:
-    - ROS_DISTRO=kinetic UPSTREAM_WORKSPACE=file
-    - ROS_DISTRO=noetic
+    - ROS_DISTRO=kinetic UPSTREAM_WORKSPACE=.ci.rosinstall.kinetic BEFORE_SETUP_UPSTREAM_WORKSPACE='sudo -H pip install -q --no-deps -r .pip.install'
+    - ROS_DISTRO=noetic UPSTREAM_WORKSPACE=.ci.rosinstall.noetic
 install:
   - git clone --quiet --depth 1 https://github.com/fmessmer/industrial_ci.git .industrial_ci -b master_pylint
 script:
