--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ notifications:
     on_failure: always
 env:
   global:
-    - ADDITIONAL_DEBS='apt-utils dialog curl wget'
+    - ADDITIONAL_DEBS='apt-utils curl dialog wget'
     - AFTER_SCRIPT='rosenv bash .travis.xacro_test.sh'
     - CATKIN_LINT=pedantic
     - CATKIN_LINT_ARGS='--ignore description_boilerplate'
@@ -21,7 +21,7 @@ env:
     - VERBOSE_OUTPUT=false
     - VERBOSE_TESTS=false
   matrix:
-    - ROS_DISTRO=kinetic UPSTREAM_WORKSPACE=file
+    - ROS_DISTRO=kinetic UPSTREAM_WORKSPACE=.ci.rosinstall.kinetic
     - ROS_DISTRO=noetic
 install:
   - git clone --quiet --depth 1 https://github.com/fmessmer/industrial_ci.git .industrial_ci -b master_pylint
