--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,12 @@ jobs:
       PYLINT_ARGS: '--output-format=parseable --errors-only'
       PYLINT_CHECK: true
       ROS_REPO: main
-      SECRET_AVAILABLE: ${{secrets.GITHUBPAT}}
-      UNDERLAY: '/root/git/care-o-bot/devel'  # workspace on docker image
 
     strategy:
       matrix:
         include:
-          - { ROS_DISTRO: kinetic, DOCKER_IMAGE: 'ghcr.io/mojin-robotics/mojin-ros:kinetic-full' }
-          - { ROS_DISTRO: noetic, DOCKER_IMAGE: 'ghcr.io/mojin-robotics/mojin-ros:noetic-full' }
+          - { ROS_DISTRO: kinetic, UPSTREAM_WORKSPACE: .ci.rosinstall.kinetic }
+          - { ROS_DISTRO: noetic }
 
     steps:
       - uses: actions/checkout@v2
@@ -44,14 +42,6 @@ jobs:
           path: ${{ env.CCACHE_DIR }}
           key: ccache-${{ matrix.ROS_DISTRO }}
 
-      - uses: docker/login-action@v1
-        if: ${{ env.SECRET_AVAILABLE }} # prevents failure notifications if secret GITHUBPAT is not available
-        with:
-          registry: ghcr.io
-          username: mojin-robotics-ci
-          password: ${{ secrets.GITHUBPAT }}
-
       - uses: ros-industrial/industrial_ci@master
-        if: ${{ env.SECRET_AVAILABLE }} # prevents failure notifications if secret GITHUBPAT is not available
         with:
           config: ${{toJSON(matrix)}}
