--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ env:
     - PYLINT_CHECK=true
     - ROS_REPO=main
   matrix:
-    - ROS_DISTRO=kinetic UPSTREAM_WORKSPACE=.ci.rosinstall.kinetic
+    - ROS_DISTRO=kinetic
     - ROS_DISTRO=noetic
 install:
   - git clone --quiet --depth 1 https://github.com/ros-industrial/industrial_ci.git .industrial_ci -b master
