Revert "tmp: tweak joint limits"
This reverts commit 787959bb07c7b5a96ad309ede82538752d73146b.

--- a/precise_description/robots/PF400_long.yaml
+++ b/precise_description/robots/PF400_long.yaml
@@ -60,8 +60,8 @@ arm:
       yaw: 0.0
     limit:
       effort: 1000.0
-      lower: -6.28  # -970
-      upper: +6.28  # +970
+      lower: -16.9296937443  # -970
+      upper: +16.9296937443  # +970
       velocity: 12.5664
   arm_5_joint:
     origin:
