--- a/precise_driver/package.xml
+++ b/precise_driver/package.xml
@@ -16,6 +16,7 @@
 
   <depend>cob_srvs</depend>
   <depend>controller_manager_msgs</depend>
+  <depend>diagnostic_updater</depend>
   <depend>geometry_msgs</depend>
   <depend>realtime_tools</depend>
   <depend>ros_control_boilerplate</depend>
