--- a/precise_driver/config/precise_controllers.yaml
+++ b/precise_driver/config/precise_controllers.yaml
@@ -26,7 +26,7 @@ hardware_interface:
   in_range: -1
   straight: 0 #0=rotational; -1=straight
 
-  post_init_configuration: [0.085, -1.552, 3.136, 3.155] #config where the arm should move to after successful initialization
+  post_init_configuration: [0.085, -1.552, 3.136, 3.155, 0.038] #config where the arm should move to after successful initialization
 
 
 # Publish all joint states ----------------------------------
